--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 :root {
     --utilities: #171717;
+    --content: #171717;
     --background: #cccccc;
-    --material: url("/assets/white_marble_horizontal.jpg");
+    /* --material: url("/assets/white_marble_horizontal.jpg"); */
+    --material: url("/assets/brush_white.jpg");
     --z-offset: 5px;
     --radius: 25px;
 }
@@ -77,7 +79,7 @@ button.standard_button:hover svg {
     height: 150px;
     width: 10px;
     margin: 0 25px;
-    background: var(--utilities);
+    background: var(--content);
 }
 
 /* ############ back button ############ */
@@ -147,6 +149,7 @@ button.standard_button:hover svg {
     align-items: center;
     perspective: 1200px;
     transform-style: preserve-3d;
+    color: var(--content);
     box-shadow: 0 -20px 80px 0 rgba(255, 255, 255, 0.6) inset,
         0 5px 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -202,7 +205,7 @@ button.standard_button:hover svg {
     display: block;
     position: relative;
     backface-visibility: hidden;
-    border: 5px solid var(--utilities);
+    border: 5px solid var(--content);
     width: 100%;
     height: 100%;
     display: flex;
