--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     --utilities: #171717;
     --content: #171717;
     --background: #cccccc;
+    --material-color: #c4c4c4;
     --material: url("/assets/white_marble_horizontal.jpg");
     /* --material: url("/assets/brush_white.jpg"); */
     --z-offset: 5px;
@@ -93,6 +94,17 @@ button.standard_button:hover svg {
     margin: 50px;
 }
 
+/* ############ add button ############ */
+.add_button.container {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.add_button.container button.standard_button {
+    margin: 50px;
+}
+
 /* ############ turn left button ############ */
 .turn_left_button.container {
 }
@@ -163,7 +175,8 @@ button.standard_button:hover svg {
     width: 100%;
     height: 100%;
     border-radius: calc(2 * var(--radius));
-    /* transform: translate3d(0, 0, var(--z-offset)); */
+
+    transform: translate3d(0, 0, var(--z-offset));
 }
 
 .card_front.container * {
@@ -171,6 +184,7 @@ button.standard_button:hover svg {
     display: block;
     position: relative;
     backface-visibility: hidden;
+    filter: drop-shadow(0 0 0.03rem var(--content));
 }
 
 .card_front.container img {
@@ -211,6 +225,7 @@ button.standard_button:hover svg {
     display: flex;
     justify-content: center;
     align-items: center;
+    filter: drop-shadow(0 0 0.2rem var(--content));
 }
 
 .bordered_container span {
@@ -259,4 +274,52 @@ button.standard_button:hover svg {
         transform: translateY(calc(-1 * calc(calc(1 / 3) * 100%)));
         width: 100%;
     }
+}
+
+/* Form */
+.form.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#form {
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: var(--material);
+    padding: 120px 0;
+    border-radius: calc(2 * var(--radius));
+}
+
+.input.container {
+}
+
+.input.container input,
+.input.container select {
+    width: 300px;
+    padding: 10px 20px;
+    margin: 5px 0;
+    border-radius: calc(0.5 * var(--radius));
+    border: none;
+    font-size: 1.2rem;
+}
+
+.input.container input:focus,
+.input.container select:focus {
+    outline: none;
+}
+
+.input.container input.invalid,
+.input.container select.invalid {
+    box-shadow: red 0px -4px 1px -2px inset;
+}
+
+.input.container input.valid,
+.input.container select.valid {
+    box-shadow: green 0px -4px 1px -2px inset;
 }
